# cc-maya-primgen

./: .gitignore  README.md
icons/: out_PrimitiveGeneratorLoc.c  primitiveGenerator.c  primitiveGenerator_CCLogo.c  primitiveGenerator_muscle.c
info/: CMakeLists.txt  info.txt
info/src/: CMakeLists.txt
make/: CMakeLists.txt  build_linux.sh  build_osx.sh  build_win.ps1
make/src/: AETemplate.h  CMakeLists.txt  DagUtils.h  LicCheck.h  PluginMain.cpp  PrimitiveGeneratorCommand.cpp  PrimitiveGeneratorCommand.h  PrimitiveGeneratorLoc.cpp  PrimitiveGeneratorLoc.h  PrimitiveGeneratorManip.cpp  PrimitiveGeneratorManip.h  PrimitiveGeneratorNode.cpp  PrimitiveGeneratorNode.h  icons.h  icons_repo.h
mel/: PrimitiveGeneratorNode.mel  PrimitiveGenerator_shelf.mel
python/: disableOverride.py  find_closest_upvec_001.py  geenratePrimgen.py  generatePrimgen.py  plotCurve.py  snapCurves.py
src/: AETemplate.h  DagUtils.cpp  PluginMain.cpp  PrimitiveGeneratorCommand.cpp  PrimitiveGeneratorCommand.h  PrimitiveGeneratorLoc.cpp  PrimitiveGeneratorLoc.h  PrimitiveGeneratorNode.cpp  PrimitiveGeneratorNode.h  PrimitiveGeneratorProfiles.h  icons.h
